--- a/client/todo.html
+++ b/client/todo.html
@@ -112,4 +112,15 @@
     <script src="./lib/fbsdk.js"></script>
 
   </body>
+  <footer class="mainfooter" role="contentinfo" style="background-color: #000000; padding-top:28px">
+    <div class="footer-bottom">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <p class="text-xs-center" style="color: white">&copy; Copyright 2018 - Valensio Deva Prasetyo.  All rights reserved.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </html>
