--- a/client/todo.html
+++ b/client/todo.html
@@ -61,6 +61,23 @@
         </a>
       </div>
 
+      <!-- quotes-todo -->
+      <div class="container" style="padding-top:28px">
+        <div class="row">
+          <div class="col-md-6 offset-md-3">
+            <div class="jumbotron">
+              <div class="container">
+                <p>Quotes Of the Day :</p>
+                <p style="font-weight: bold">"{{show_quotes.quote}}"</p>
+                <p class="lead">-{{show_quotes.author}}</p>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+
       <!-- modal todo -->
       <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
