--- a/client/todo.html
+++ b/client/todo.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title></title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style media="screen">
+    .responsive-carousel {
+      height: 650px;
+    }
+    @media only screen and (max-width: 990px) {
+      .responsive-carousel {
+        height: initial;
+      }
+    }
+    </style>
   </head>
   <body>
 
@@ -36,7 +47,7 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
-        <div class="carousel-inner responsive-carousel" style="height: 650px">
+        <div class="carousel-inner responsive-carousel">
           <div class="carousel-item active" >
             <img class="d-block w-100" src="img/haha.jpg" alt="First slide">
           </div>
